--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ boto3==1.40.27
 botocore==1.40.27
 certifi==2025.8.3
 charset-normalizer==3.4.3
+customtkinter==5.2.2
+darkdetect==0.8.0
 distro==1.9.0
 ecdsa==0.19.1
 envs==1.4
