--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose-cryptodome==1.3.2
 PyYAML==6.0.2
+PyJWT==2.10.1
 requests==2.32.5
 requests-toolbelt==1.0.0
 s3transfer==0.14.0
