--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,11 @@ jobs:
         DISPLAY: ":99"
         PYTHONUNBUFFERED: 1
       run: |
+        sudo apt-get update
+        sudo apt-get install -y xvfb
+        Xvfb :99 -screen 0 1024x768x24 &    
         pytest -v tests/gui_test.py
+
 
   build:
     runs-on: windows-latest
